Fix2 release 4.2 (#1342)
* fix button '-', workflow action and add fix document send homepage

* fix workflow log, add scrollbars

* fix description, rule detail

---------

--- a/assets/css/rule.css
+++ b/assets/css/rule.css
@@ -948,6 +948,7 @@ table.table-rule-view tr:first-child th, table.table-rule-view-workflows tr:firs
 .description-field .value,
 #description-field-value {
   min-width: 0;
+  max-height: 3em;
   display: block;
   visibility: visible;
 }
